Default heap size causes native memory exhaustion on 32 bit Windows

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • 9
    • b137
    • Not verified

      Use the 32 bit windows fastdebug build from a current promoted build
      (eg b126 as used here) to run the standard SwingSet2 demo

      Click around in a couple of tabs and BOOM.
      It will die with an error message that amounts to insufficient memory.

      C:b126dbg\jdk-9\fastdebug\bin\java -jar SwingSet2.jar
      java.lang.OutOfMemoryError
      #
      # There is insufficient memory for the Java Runtime Environment to continue.
      # Native memory allocation (malloc) failed to allocate 566080 bytes for Chunk::n
      ew
      # An error report file with more information is saved as:
      # demo\jfc\SwingSet2\hs_err_pid5036.log
      #
      # Compiler replay data is saved as:
      # demo\jfc\SwingSet2\replay_pid5036.log

      This appears to be a regression from removing the client VM as builds
      pre-dating that work fine.

      I expect that this means that the 32 bit VM product build is also more
      likely to run out of memory in the same way - although it will take
      more than this demo to do it

            Assignee:
            Mikael Gerdin (Inactive)
            Reporter:
            Philip Race
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: