8161079: Default heap size causes native memory exhaustion on 32 bit Windows

Reviewed-by: tschatzl, sjohanss